# RubiksCubeSolver

./: CMakeLists.txt  main.cpp
Model/: 1DArray.cpp  3DArray.cpp  RubiksCube.cpp  RubiksCube.h  RubiksCubeBitboard.cpp
PatternDatabases/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.h  PatternDatabase.h  PermutationIndexer.h  math.h
Solver/: BFSSolver.h  DFSSolver.h  IDAstarSolver.h  IDDFSSolver.h
